# simple-cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  conanfile.py
sources/: main.cpp
src/: main.cpp
src/engine/core/: Components.hpp  Engine.cpp  Engine.hpp  EventHandler.cpp  EventHandler.hpp  Events.hpp  Logger.cpp  Logger.hpp  System.cpp  System.hpp  Types.hpp
src/engine/managers/: AssetManager.cpp  AssetManager.hpp  BackgroundManager.hpp  EventManager.cpp  EventManager.hpp  config.hpp
src/engine/systems/: SAgent.cpp  SAgent.hpp  SBackground.cpp  SBackground.hpp  SCamera.cpp  SCamera.hpp  SCollision.cpp  SCollision.hpp  SInput.cpp  SInput.hpp  SObjects.cpp  SObjects.hpp  SPlayer.cpp  SPlayer.hpp  SRender.cpp  SRender.hpp  SRigidBody.cpp  SRigidBody.hpp  SSprite.cpp  SSprite.hpp  STransform.cpp  STransform.hpp
src/game/: SpaceGame.cpp  SpaceGame.hpp
src/old/: GraphicsManager.cpp  GraphicsManager.hpp  SystemsManager.cpp  SystemsManager.hpp
tools/cmake/: clangd.cmake  macros.cmake
tools/scripts/: Setup-Linux.sh  Setup-Windows.bat
